@@ -1,7 +1,12 @@
+2004-02-24  ujwal
+
+	* Added back support for blinking cursor. Reduced blink frequency.
+	* Added back support for "Focus follows mouse".
+
 2004-02-23  ujwal
 
 	* Added support for setting cursor color.
-	* Changed bold behavior by redrawing character offset by one pixel. 
+	* Changed bold behavior by redrawing character. 
 	  Bold now works for all fonts.
 	* Fixed config panel nibs.
 
